NEXT-25371 - Fix quantity alignment of order line item

--- a/src/Storefront/Resources/app/storefront/src/scss/component/_line-item.scss
+++ b/src/Storefront/Resources/app/storefront/src/scss/component/_line-item.scss
@@ -369,11 +369,10 @@
         }
 
         .line-item-quantity {
-            justify-content: space-between;
+            justify-content: center;
             display: flex;
         }
 
-        .line-item-quantity,
         .line-item-unit-price,
         .line-item-total-price,
         .line-item-tax-price {
